--- a/templates/blog/inicio.html
+++ b/templates/blog/inicio.html
@@ -2,21 +2,22 @@
 {% load static %}
 
 {% block contenido %}
-  {% for articulo in articulos %}
-    {% if forloop.first and page_obj.number == 1 %}
-        <!-- ULTIMO POST - ARRIBA DE TODO -->
-        <article class="p-4 p-md-5 mb-4 rounded text-bg-dark">
-          <section class="col-md-12 px-0">
-            <h1 class="display-4 fst-italic text-white">{{ articulo.titulo }}</h1>
-            <p class="lead my-3">{{ articulo.bajada }}</p>
-            <p class="lead mb-0">
-              <a href= {% url 'articulo' articulo_slug=articulo.slug %} class="text-white fw-bold">Seguir leyendo...</a>
-            </p>
-          </section>
-        </article>
+  {% for articulo in articulos%}
+    {%if forloop.first and page_obj.number == 1 %}
+    <!--ULTIMO POST - ARRIBA DE TODO-->
+          <article class="p-4 p-md-5 mb-4 rounded text-bg-dark">
+            <section class="col-md-12 px-0">
+              <h1 class="display-4 fst-italic text-white">{{ articulo.titulo }}</h1>
+              <p class="lead my-3">{{ articulo.bajada }}</p>
+              <p class="lead mb-0">
+                <a href= {% url 'articulo' articulo_slug=articulo.slug %} 
+                class="text-white fw-bold">Seguir leyendo...</a>
+              </p>
+            </section>
+          </article>
     {% else %}
       {% if forloop.counter|divisibleby:2 %}
-          <!-- Artículo 1 -->
+          <!--Artículo1 -->
           <article class="card mb-3">
             <section class="row g-0">
               <figure class="col-md-5">
@@ -26,7 +27,7 @@
                 <section class="card-body">
                   <strong class="d-inline-block mb-2 text-primary">{{ articulo.categoria }}</strong>
                   <h4 class="mb-0">{{ articulo.titulo }}</h4>
-                  <p class="mb-1 text-muted">{{ articulo.creacion|date:'d M Y' }}</p>
+                  <p class="mb-1 text-muted"> {{ articulo.creacion|date:'d M Y' }}</p>
                   <p class="card-text mb-auto">{{ articulo.bajada }}</p>
                   <p class="card-text">
                     <small class="text-muted">
@@ -38,38 +39,38 @@
             </section>
           </article>
       {% else %}
-        <!-- Artículo 2 -->
-        <article class="card mb-3">
-          <section class="row g-0">
-            <section class="col-md-7">
-              <section class="card-body">
-                <strong class="d-inline-block mb-2 text-primary">{{ articulo.categoria }}</strong>
-                <h4 class="mb-0">{{ articulo.titulo }}</h4>
-                <p class="mb-1 text-muted">{{ articulo.creacion|date:'d M Y' }}</p>
-                <p class="card-text mb-auto">{{ articulo.bajada }}</p>
-                <p class="card-text">
-                  <small class="text-muted">
-                    <a href= {% url 'articulo' articulo_slug=articulo.slug %} class="stretched-link">Seguir leyendo</a>
-                  </small>
-                </p>
+        <!-- Articulo 2 -->
+          <article class="card mb-3">
+            <section class="row g-0">
+              <section class="col-md-7">
+                <section class="card-body">
+                  <strong class="d-inline-block mb-2 text-primary">{{ articulo.categoria }}</strong>
+                  <h4 class="mb-0">{{ articulo.titulo }}</h4>
+                  <p class="mb-1 text-muted">{{ articulo.creacion|date:'d M Y' }}</p>
+                  <p class="card-text mb-auto">{{ articulo.bajada }}</p>
+                  <p class="card-text">
+                    <small class="text-muted">
+                      <a href={% url 'articulo' articulo_slug=articulo.slug %} class="stretched-link">Seguir leyendo</a>
+                    </small>
+                  </p>
+                </section>
               </section>
+              <figure class="col-md-5">
+                <img src={{ articulo.imagen.url }} class="img-fluid rounded-end float-end" alt="...">
+              </figure>
             </section>
-            <figure class="col-md-5">
-              <img src= {{ articulo.imagen.url }} class="img-fluid rounded-end float-end" alt="...">
-            </figure>
-          </section>
-        </article>
+          </article>
       {% endif %}
     {% endif %}
   {% endfor %}
 
-      <!-- NAVEGACION ENTRE ARTICULOS MAS ANTIGUOS - PAGINACION -->
+          <!-- NAVEGACION ENTRE ARTICULOS MAS ANTIGUOS - PAGINACION -->
   <hr>
-
+          
   <nav aria-label="...">
     <ul class="pagination justify-content-center">
       <li class="page-item"><a class="page-link" href="?page=1">Inicio</a></li>
-    
+
       {% if page_obj.has_previous %}
         <li class="page-item">
           <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
@@ -77,7 +78,7 @@
       {% else %}
         <li class="page-item page-link disabled">Anterior</li>
       {% endif %}
-      
+
       <li class="page-item page-link active">{{ page_obj.number }} de {{ page_obj.paginator.num_pages }}</li>
       
       {% if page_obj.has_next %}
@@ -89,9 +90,10 @@
       {% endif %}
       
       <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Última</a></li>
-      
     </ul>
   </nav>
   <hr>
 
-{% endblock contenido %}
+  {% endblock contenido %}
+
+
