Change: app_name=apps.blog  added to urls and templates

--- a/templates/blog/404.html
+++ b/templates/blog/404.html
@@ -7,7 +7,7 @@
 <h1> Página no encontrada </h1>
 
   <div class="my-3">
-    <a class="btn btn-dark rounded-pill" href= {% url 'inicio' %}>Volver al Inicio</a>
+    <a class="btn btn-dark rounded-pill" href= {% url 'apps.blog:inicio' %}>Volver al Inicio</a>
   </div>
 
 {% endblock contenido %}
