--- a/templates/blog/archivo.html
+++ b/templates/blog/archivo.html
@@ -30,7 +30,7 @@
               <p class="card-text mb-auto">{{ articulo.bajada }}</p>
               <p class="card-text">
                 <small class="text-muted">
-                  <a href= {% url 'articulo' articulo_slug=articulo.slug %} class="stretched-link">Seguir leyendo</a>
+                  <a href= {% url 'apps.blog:articulo' articulo_slug=articulo.slug %} class="stretched-link">Seguir leyendo</a>
                 </small>
               </p>
             </section>
@@ -49,7 +49,7 @@
               <p class="card-text mb-auto">{{ articulo.bajada }}</p>
               <p class="card-text">
                 <small class="text-muted">
-                  <a href= {% url 'articulo' articulo_slug=articulo.slug %} class="stretched-link">Seguir leyendo</a>
+                  <a href= {% url 'apps.blog:articulo' articulo_slug=articulo.slug %} class="stretched-link">Seguir leyendo</a>
                 </small>
               </p>
             </section>
@@ -94,7 +94,7 @@
     </nav>
   {% else %}
     <section class="my-3 mt-5 mb-5">
-      <a class="btn btn-dark rounded-pill" href={% url 'inicio' %}>Volver al Inicio</a>
+      <a class="btn btn-dark rounded-pill" href={% url 'apps.blog:inicio' %}>Volver al Inicio</a>
     </section>
   {% endif %}
   <hr>
