--- a/templates/blog/forms/actualizar_articulo.html
+++ b/templates/blog/forms/actualizar_articulo.html
@@ -12,7 +12,7 @@
             {{ form.as_p }}
 
             <section class='my-3 mt-5 mb-5'>
-                <a class="btn btn-dark rounded-pill" href={% url 'articulo' articulo_slug=articulo.slug %}>Cancelar</a>
+                <a class="btn btn-dark rounded-pill" href={% url 'apps.blog:articulo' articulo_slug=articulo.slug %}>Cancelar</a>
                 <input class='btn btn-dark rounded-pill float-end' type='submit' value='Actualizar Articulo'>
             </section>
 
