--- a/templates/blog/forms/crear_articulo.html
+++ b/templates/blog/forms/crear_articulo.html
@@ -12,7 +12,7 @@
             {{ form.as_p }}
 
             <section class='my-3 mt-5 mb-5'>
-                <a class="btn btn-dark rounded-pill" href={% url 'inicio' %}>Cancelar</a>
+                <a class="btn btn-dark rounded-pill" href={% url 'apps.blog:inicio' %}>Cancelar</a>
                 <input class='btn btn-dark rounded-pill float-end' type='submit' value='Crear Articulo'>
             </section>
 
