--- a/templates/blog/forms/eliminar_articulo.html
+++ b/templates/blog/forms/eliminar_articulo.html
@@ -13,7 +13,7 @@
                 <section class="card-body">
                     <h5 class="card-title">Borrado</h5>
                     <p class="card-text">¿Confirme el borrado del artículo: <strong>{{ articulo }}</strong> ?</p>
-                    <a class="btn btn-dark rounded-pill" href={% url 'articulo' articulo_slug=articulo.slug %}>Cancelar</a>
+                    <a class="btn btn-dark rounded-pill" href={% url 'apps.blog:articulo' articulo_slug=articulo.slug %}>Cancelar</a>
                     <input class='btn btn-dark rounded-pill float-end' type='submit' value='Confirmar'>
                 </section>
             </article>
