--- a/templates/blog/inicio.html
+++ b/templates/blog/inicio.html
@@ -10,7 +10,7 @@
               <h1 class="display-4 fst-italic text-white">{{ articulo.titulo }}</h1>
               <p class="lead my-3">{{ articulo.bajada }}</p>
               <p class="lead mb-0">
-                <a href= {% url 'articulo' articulo_slug=articulo.slug %} 
+                <a href= {% url 'apps.blog:articulo' articulo_slug=articulo.slug %} 
                 class="text-white fw-bold">Seguir leyendo...</a>
               </p>
             </section>
@@ -31,7 +31,7 @@
                   <p class="card-text mb-auto">{{ articulo.bajada }}</p>
                   <p class="card-text">
                     <small class="text-muted">
-                      <a href= {% url 'articulo' articulo_slug=articulo.slug %} class="stretched-link">Seguir leyendo</a>
+                      <a href= {% url 'apps.blog:articulo' articulo_slug=articulo.slug %} class="stretched-link">Seguir leyendo</a>
                     </small>
                   </p>
                 </section>
@@ -50,7 +50,7 @@
                   <p class="card-text mb-auto">{{ articulo.bajada }}</p>
                   <p class="card-text">
                     <small class="text-muted">
-                      <a href={% url 'articulo' articulo_slug=articulo.slug %} class="stretched-link">Seguir leyendo</a>
+                      <a href={% url 'apps.blog:articulo' articulo_slug=articulo.slug %} class="stretched-link">Seguir leyendo</a>
                     </small>
                   </p>
                 </section>
