--- a/templates/blog/articulo.html
+++ b/templates/blog/articulo.html
@@ -36,45 +36,84 @@
   </section>
 
   <!-- Comentarios -->
-  <section>
+  {% block comentarios %}
+ 
+    {% include 'blog/forms/crear_comentario.html' %}
+
+  {% endblock comentarios %}
+
+  {% comment %} <section>
+    <strong>Deja tus comentarios aquí</strong>
     <div class="card">
-      <div class="card-body">
-        <div class="d-flex flex-start align-items-center">
-          <img class="rounded-circle shadow-1-strong me-3"
-            src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(19).webp" alt="avatar" width="60"
-            height="60" />
-          <div>
-            <h6 class="fw-bold text-primary mb-1">Lily Coleman</h6>
-            <p class="text-muted small mb-0">
-              Shared publicly - Jan 2020
-            </p>
+
+      {% for comentario in articulo.comentarios.all %}
+        <div class="card-body">
+          <div class="d-flex flex-start align-items-center">
+            <img class="rounded-circle shadow-1-strong me-3"
+              src={% if request.user.is_superuser %} "{% static 'blog/img/user_admin.webp'%}"
+                  {% elif request.user.is_staff %} "{% static 'blog/img/user_staff.webp'%}"
+                  {% else %} "{% static 'blog/img/user_user.png' %}"
+                  {% endif %}
+              alt="avatar"
+              width="60"
+              height="60"
+            />
+            <div>
+              <h6 class="fw-bold text-primary mb-1">{{ comentario.autor }}</h6>
+              <p class="text-muted small mb-0">
+                Comentado el - {{ comentario.creacion|date:'d M Y'  }}
+              </p>
+            </div>
           </div>
+
+          <p class="mt-3 mb-4 pb-2">
+            {{ comentario.contenido }}
+          </p>
         </div>
 
-        <p class="mt-3 mb-4 pb-2">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip consequat.
-        </p>
+      {% empty %}
 
-      </div>
-      <div class="card-footer py-3 border-0" style="background-color: #f8f9fa;">
-        <div class="d-flex flex-start w-100">
-          <img class="rounded-circle shadow-1-strong me-3"
-            src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(19).webp" alt="avatar" width="40"
-            height="40" />
-          <div class="form-outline w-100">
-            <textarea class="form-control" id="textAreaExample" rows="4" style="background: #fff;"></textarea>
-            <label class="form-label" for="textAreaExample">Message</label>
+        {% if request.user.is_active %}
+          <div class="alert alert-danger mb-0" role="alert">
+            <p>Aún no hay comentarios. Se el primero en hacerlo</p>
           </div>
-        </div>
-        <div class="float-end mt-2 pt-1">
-          <button type="button" class="btn btn-primary btn-sm">Post comment</button>
-          <button type="button" class="btn btn-outline-primary btn-sm">Cancel</button>
-        </div>
-      </div>
+        {% else %}
+          <div class="alert alert-danger mb-0" role="alert">
+            <p>Aún no estás registrado y no puedes comentar. ¡Regístrate gratis y disfruta de más opciones del Blog!</p>
+          </div>
+        {% endif %}
+
+      {% endfor %}
+
+      {% if request.user.is_active %}
+        <form method='post'>
+          <div class="card-footer py-3 border-0" style="background-color: #f8f9fa;">
+            <div class="d-flex flex-start w-100">
+              <img class="rounded-circle shadow-1-strong me-3"
+                src={% if request.user.is_superuser %} "{% static 'blog/img/user_admin.webp'%}"
+                    {% elif request.user.is_staff %} "{% static 'blog/img/user_staff.webp'%}"
+                    {% else %} "{% static 'blog/img/user_user.png' %}"
+                    {% endif %}
+                alt="avatar"
+                width="40"
+                height="40"
+              />
+              <div class="form-outline w-100">
+                {% csrf_token %}
+                {{ form }}
+                <label class="form-label" for="textAreaExample">Comentario</label>
+              </div>
+            </div>
+            <div class="float-end mt-2 pt-1">
+              <input class="btn btn-primary btn-sm" type='submit' value='Publicar comentario' href={% url 'apps.blog:comentario' articulo_id=articulo.id %}>
+              <a class="btn btn-outline-primary btn-sm" href={% url 'apps.blog:articulo' articulo_slug=articulo.slug %}>Cancelar</a>
+            </div>
+          </div>
+        </form>
+      {% endif %}
+
     </div>
-  </section>
+  </section> {% endcomment %}
 
 
 {% endblock contenido %}
