--- a/static/blog/css/blog.css
+++ b/static/blog/css/blog.css
@@ -74,7 +74,9 @@ h6 {
   padding: 2.5rem 0;
   color: #727272;
   text-align: center;
-  background-color: #f9f9f9;
+  /* background-color: #f9f9f9; */
+  background: rgb(2,0,36);
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,0.8996848739495799) 35%, rgba(0,212,255,1) 100%);
   border-top: .05rem solid #e5e5e5;
 }
 
@@ -135,4 +137,13 @@ h6 {
   text-align: center;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
+}
+
+/*
+ * nuevo código para HTML
+ */
+
+.backgr-degradado {
+  background: rgb(2,0,36);
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,0.8996848739495799) 35%, rgba(0,212,255,1) 100%);
 }
