--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -3,7 +3,7 @@
 {% block contenido %}
 
     <section class="mt-5 mb-5 text-center">
-        <h4 class='mb-5'>¡Desconectado!</h4>
+        <h4 class='mb-5'>¡Te desconectaste!</h4>
 
         <a class="btn btn-dark rounded-pill" href="{% url 'login'%}">Haga clic aquí para iniciar sesión de nuevo.</a>
     </section>
