--- a/templates/blog/forms/actualizar_comentario.html
+++ b/templates/blog/forms/actualizar_comentario.html
@@ -5,7 +5,8 @@
 {% block contenido %}
 
     <section>
-        <h2>Actualizar Comentario</h2>
+        <h2 class="bg-light rounded ps-2">Actualizar Comentario</h2>
+        <br>
         <form method='post'>
             {% csrf_token %}
 
