--- a/templates/blog/forms/crear_articulo.html
+++ b/templates/blog/forms/crear_articulo.html
@@ -5,7 +5,8 @@
 {% block contenido %}
 
     <section>
-        <h2>Crear Artículo</h2>
+        <h2 class="bg-light rounded ps-2">Crear Artículo</h2>
+        <br>
         <form method='post' enctype='multipart/form-data'>
             {% csrf_token %}
 
