--- a/templates/blog/forms/eliminar_articulo.html
+++ b/templates/blog/forms/eliminar_articulo.html
@@ -5,14 +5,15 @@
 {% block contenido %}
 
     <section>
-        <h2>Eliminar Artículo</h2>
+        <h2 class="bg-warning rounded ps-2">Eliminar Artículo</h2>
+        <br>
         <form method='post'>
             {% csrf_token %}
 
             <article class="card mx-auto mt-5" style="width: 18rem;">
                 <section class="card-body">
-                    <h5 class="card-title">Borrado</h5>
-                    <p class="card-text">¿Confirme el borrado del artículo: <strong>{{ articulo }}</strong> ?</p>
+                    <h5 class="card-title text-center">Borrado</h5>
+                    <p class="card-text">¿Confirma que borrará el artículo: <strong>{{ articulo }}</strong> ?</p>
                     <a class="btn btn-dark rounded-pill" href={% url 'apps.blog:articulo' articulo_slug=articulo.slug %}>Cancelar</a>
                     <input class='btn btn-dark rounded-pill float-end' type='submit' value='Confirmar'>
                 </section>
