--- a/templates/blog/forms/eliminar_comentario.html
+++ b/templates/blog/forms/eliminar_comentario.html
@@ -5,15 +5,16 @@
 {% block contenido %}
 
     <section>
-        <h2>Eliminar Comentario</h2>
+        <h2 class="bg-warning rounded ps-2">Eliminar Comentario</h2>
+        <br>
         <form method='post'>
             {% csrf_token %}
 
             <article class="card mx-auto mt-5">
                 <section class="card-body">
                     <h5 class="card-title text-center alert alert-warning " role="alert">Proceso de borrado</h5>
-                    <p class="card-text">¿Confirma que quiere borrar el comentario?</p>
-                    <strong>{{ comentario.contenido }}</strong>
+                    <p class="card-text">¿Confirma que quiere borrar el comentario de contenido <strong>{{ comentario.contenido }}</strong> ?</p>
+                    
 
                     <section class="card-body d-flex flex-row justify-content-end gap-2">
                       <a class="btn btn-dark rounded-pill" href={% url 'apps.blog:inicio' %}>Cancelar</a>
