Change: mejora en aspecto

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -31,7 +31,7 @@
       <section class="dropdown">
         <a href={% url 'apps.blog:inicio' %} class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
           <img class="bi me-0 border border-3 border-start-0 border-end-0" width="95" height="95" src={% static 'blog/img/robot_logo2.jpg' %}>
-          <section class="d-flex flex-column align-items-center justify-content-start border border-3 border-start-0 rounded-end" style="background-color: #ffffff; font-weight:500;">
+          <section class="d-flex flex-column align-items-center justify-content-start border border-3 border-start-0 rounded-end" style="background-color: #ffffff; font-weight:500; height:95;">
             <span class="text-center" style="width:10rem; font-size:0.85rem; letter-spacing:0.55rem;">NOTICIAS</span>
             <span class="fs-2 text-center border-top border-bottom border-primary border-1" style="width:8rem; font-weight:700;letter-spacing:0.15rem;">BLOG</span>
             <span class="text-center" style="width:10rem; font-size:0.85rem; letter-spacing:0.35rem;">ROBOTICAS</span>
