--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -125,7 +125,7 @@
                 {% csrf_token %}
 
                 <div class="d-flex justify-content-center align-items-center gap-3">
-                  <h4 class="fst-italic">Archivos</h4>
+                  <h4 class="fst-italic">Publicaciones</h4>
                   
                   <div class="dropdown pb-2">
                     <button class="btn btn-info dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
@@ -138,7 +138,7 @@
 
                 <ol class="list-unstyled mb-0">
                   {% for archivo in archivos %}
-                    <li><a class="text-decoration-none" href= {% url 'apps.blog:archivo' year=archivo.fecha.year month=archivo.fecha.month %} >{{ archivo.fecha|date:'d F Y'|capfirst }}</a></li>
+                    <li><a class="text-decoration-none" href= {% url 'apps.blog:archivo' year=archivo.fecha.year month=archivo.fecha.month %} >{{ archivo.fecha|date:'F Y'|capfirst }}</a></li>
                   {% endfor %}
                 </ol>
             </article>
