--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -26,7 +26,7 @@
 <body>
   <section class="container px-0">
 
-    <header class="d-flex flex-wrap justify-content-center justify-content-sm-between py-3 mb-4 backgr-degradado border-bottom">
+    <header class="d-flex flex-wrap justify-content-center justify-content-sm-between py-3 mb-4 bg-primary border-bottom">
 
       <section class="dropdown">
         <a href={% url 'apps.blog:inicio' %} class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
