Change: estilos de background

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -26,7 +26,7 @@
 <body>
   <section class="container px-0">
 
-    <header class="d-flex flex-wrap justify-content-center justify-content-sm-between py-3 mb-4 bg-primary border-bottom">
+    <header class="BackgroundColorUser d-flex flex-wrap justify-content-center justify-content-sm-between py-3 mb-4 border-bottom">
 
       <section class="dropdown">
         <a href={% url 'apps.blog:inicio' %} class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
@@ -168,7 +168,7 @@
     </main>
     <script src={% static 'blog/js/bootstrap.bundle.min.js' %}></script>
 
-    <footer class="blog-footer text-white">
+    <footer class="BackgroundColorUser blog-footer text-white">
       <p>BLOG Noticias Robóticas - Derechos reservados © 2023</p>
       <p><a href="#"><i class="bi bi-arrow-bar-up text-light"></i></a></p>
     </footer>
