--- a/static/blog/css/blog.css
+++ b/static/blog/css/blog.css
@@ -1,3 +1,13 @@
+/*
+ * nuevo código para HTML
+ */
+
+ .BackgroundColorUser {
+  background: rgb(2,0,36);
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,0.8996848739495799) 35%, rgba(0,212,255,1) 100%);
+}
+
+
 /* stylelint-disable selector-list-comma-newline-after */
 
 .blog-header {
@@ -75,7 +85,6 @@ h6 {
   color: #727272;
   text-align: center;
   /* background-color: #f9f9f9; */
-  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,0.8996848739495799) 35%, rgba(0,212,255,1) 100%);
   border-top: .05rem solid #e5e5e5;
 }
 
@@ -136,17 +145,4 @@ h6 {
   text-align: center;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
-}
-
-/*
- * nuevo código para HTML
- */
-
-.backgr-degradado {
-  background: rgb(2,0,36);
-  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,0.8996848739495799) 35%, rgba(0,212,255,1) 100%);
-}
-
-.bg-primary {
-  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,0.8996848739495799) 35%, rgba(0,212,255,1) 100%);
 }
