Change: nuevo título en mensaje al cambiar la contraseña

--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,6 +2,8 @@
 
 {% block contenido %}
 
+  <h2 class="bg-light rounded ps-2">Por favor ingrese el email con el que se registró</h2>
+  <br>
   <form action="" method="post">
 
   {% csrf_token %}
